<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pocket Diary</string>

    <!-- Common strings  -->
    <string name="day_view">Day</string>
    <string name="month_view">Month</string>
    <string name="button_cancel">Cancel</string>

    <!-- MainActivity -->
    <string name="title_home">Home</string>
    <string name="title_collection">Collection</string>
    <string name="title_analyze">Analyze</string>
    <string name="title_setting">Settings</string>

    <!--  ChangeLanguage   -->
    <string name="change_language">App language</string>
    <string name="language_vi">Vietnamese</string>
    <string name="language_en">English</string>

    <!--  DisplayMode  -->
    <string name="display_mode">Choose a display mode</string>
    <string name="display_mode_light">Light</string>
    <string name="display_mode_dark">Dark</string>
    <string name="display_mode_system">System default</string>

    <!-- Accessibility -->
    <string name="title_share">Share</string>
    <string name="add_record">Add record</string>
    <string name="share_image">Share photo</string>
    <string name="download_image">Download image</string>
    <string name="new_record">New record</string>
    <string name="title_settings">Settings</string>

    <!--  Share  -->
    <string name="image_saved">Image saved</string>
    <string name="image_not_saved">Failed to save image</string>

    <!--  Contact  -->
    <string name="question_general">What do you want to tell us?</string>
    <string name="rbtn_question">Question</string>
    <string name="rbtn_report">Bug report</string>
    <string name="rbtn_suggestion">Suggestion</string>
    <string name="rbtn_compliment">Compliment</string>
    <string name="rbtn_others">Other</string>
    <string name="contact_question_se">What is your inquiry about?</string>
    <string name="contact_rbtn_records">Records</string>
    <string name="contact_rbtn_migration">Migration</string>
    <string name="contact_rbtn_features">Features</string>
    <string name="contact_rbtn_supports">Supports</string>
    <string name="contact_content">Content</string>
    <string name="contact_text_notice">Notice</string>
    <string name="contact_notice_content">• It may take up to 7 days for our support team to get back to you.\n• Abusive language or spam will not be tolerated.\n• By pressing [Send], you agree to the Terms of Service and Privacy Policy.</string>
    <string name="contact_rbtn_send">Send</string>
    <string name="contact_title">Contact us</string>
    <string name="contact_text_hint">Your message</string>
    <string name="contact_max_image">You selected the maximum number of images"</string>
    <string name="contact_allow_image">You can only select up to 1 image</string>

    <!--  Reminder  -->
    <string name="select_reminder_time">Change reminder time</string>

    <string name="your_mood_chart">Your mood chart</string>
    <string name="view_all">View all</string>
    <string name="most_recorded">Most recorded</string>

    <string name="most_recorded_mood">Most recorded - Mood</string>
    <string name="most_recorded_weather">Most recorded - Weather</string>
    <string name="most_recorded_activity">Most recorded - Activity</string>
    <string name="most_recorded_partner">Most recorded - Partner</string>

    <!--  Collection-->
    <string name="recent_photos">Recent photos</string>
    <string name="see_more_photos">See more</string>
    <string name="saved_records">Saved records</string>

    <!--  Record  -->
    <string name="record">Record</string>
    <string name="record_allow_image">You can only select up to 3 images</string>
    <string name="record_status">Status</string>
    <string name="record_mood_score">Mood score</string>
    <string name="record_activity">Activity</string>
    <string name="record_partner">Partner</string>
    <string name="record_weather">Weather</string>
    <string name="record_sleep">Sleep</string>
    <string name="record_go_bed">Go to bed</string>
    <string name="record_wake_up">Wake up</string>
    <string name="select_time">Choose time</string>
    <string name="record_note">Your notes</string>
    <string name="record_title">Your title</string>
    <string name="record_done">Done</string>
    <string name="record_emotion_title">Added to Status</string>
    <string name="record_activity_title">Added to Activity</string>
    <string name="record_partner_title">Added to Partner</string>
    <string name="record_weather_title">Added to Weather</string>
    <string name="record_images">You have not added any photo</string>
    <string name="record_title_add_image">Number of photos added %d/%d</string>
    <string name="record_toast_fail">Record failed!</string>
    <string name="record_alert_title">Exit confirmation</string>
    <string name="record_alert_message">Are you sure you want to exit?\nChanges will not be saved.</string>
    <string name="record_toast_success">Recorded successfully!</string>

    <!--Other (remove)-->
    <string name="by_month">Month</string>
    <string name="entire_year">Year</string>
    <string name="custom">Custom</string>
    <string name="Go">Go</string>
    <string name="year_in_pocket">Year in Pocket</string>
    <string name="ShowDiaLog">Show Dialog</string>

    <!--Month(Add diary)-->
    <string name="month_alert_title">Unable to create</string>
    <string name="month_alert_message">Can not create record for future date</string>
    <string name="average_rating">Average</string>

    <!--  Reminder  -->
    <string name="reminder_title">Remind</string>
    <string name="reminder_message">It has been %s years since %s!</string>

    <string name="frequently_recorded">Frequently recorded</string>
    <string name="no_record">There is no record on this day.</string>

    <!--  Setting  -->
    <string name="setting_title">Settings</string>
    <string name="setting_display">Display</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_other">Others</string>
    <string name="setting_feedback">Send feedback</string>
    <string name="setting_sub_feedback">Help us to improve this application</string>

    <!-- Notification -->
    <string name="notification_title">Notification</string>
    <string name="notification_daily_reminder">Daily reminder</string>
    <string name="notification_reminder_time">Reminder time</string>
    <string name="notification_day">Day</string>

    <string name="notification_1">You added your new diary today!</string>
    <string name="notification_1_1">You have added a diary for the day:</string>
    <string name="notification_2">You added your new diary today and today is an important day!</string>
    <string name="notification_2_1">You have added a new diary for the day</string>
    <string name="notification_2_2"> and marked it as important!</string>
    <string name="notification_3_1">Your mood score for </string>
    <string name="notification_3_2"> is: </string>
    <string name="notification_4">You have set a password! If you were not the one who set it up, contact us for support!</string>
    <string name="notification_5">You have changed your password, please check again. If you did not make this change, contact us for support!</string>
    <string name="notification_6">You have deleted your password!</string>
    <string name="notification_null">No notifications!</string>
    <string name="notification_7">You edited your diary:</string>
    <string name="notification_8_1">You edited your diary </string>
    <string name="notification_8_2">and marked this entry as an important journal </string>


    <!--   Month -->
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>


    <!-- Security -->
    <string name="security_title">Security</string>
    <string name="security_sign_in">Sign in with your PIN</string>
    <string name="security_sign_in_subtitle">PIN cannot be recovered</string>
    <string name="security_change_PIN">Change your PIN</string>
    <string name="security_delete_PIN">Delete your PIN</string>
    <string name="firstInputTip">Enter a PIN of 4 digits</string>
    <string name="secondInputTip">Re-enter new PIN</string>
    <string name="wrongLengthTip">Your PIN should have 4 digits!</string>
    <string name="wrongInputTip">Pin does not match</string>
    <string name="correctInputTip">PIN is correct</string>
    <string name="loginAgain">Please log in again</string>


    <!--  Image App  -->
    <string name="title_YourImage">Your photos</string>
    <string name="statistics_for">Statistics</string>


    <!--  Full Image View  -->
    <string name="fgm_title">Title: </string>
    <string name="fgm_note">Note: </string>
    <string name="fgm_overall_score">Overall Score: </string>
    <string name="fgm_Time">Time: </string>
    <string name="fgm_Day">Day </string>


    <string name="delete_diary">Notification</string>
    <string name="delete">Are you sure you want to delete this record?</string>
    <string name="deleteNotification">Are you sure you want to delete this notification?</string>

    <string name="cancel">Cancel</string>

    <!-- Alarm Clock   -->
    <string name="add_pocket_diary">Add a record</string>
    <string name="add_pocket_diary_description">It is time to add the journal entry of today. Let\'s open the app and add the journal entry of today!</string>
    <string name="alarm_clock">Alarm Clock</string>
    <string name="alarm_clock_description">Alarm to log every day</string>
    <string name="remind">Remind</string>
    <string name="remind_description">Reminder when you have not been in the app for too long</string>
    <string name="remind_notification">Reminder Notification</string>
    <string name="remind_notification_description">Have you forgotten me? Let us turn memories into memorable journeys today</string>
    <string name="id_AlarmReceiver">idalarmreceiver</string>
    <string name="id_NotificationReceiver">idnotificationreceiver</string>


    <string name="from">From: </string>
    <string name="to">To: </string>


    <string name="no_diary">Your diary is empty.\nLet\'s create a record.</string>
    <string name="no_photo">There is no photo yet.\nLet\'s add some images to your diary.</string>
    <string name="no_important">You haven\'t saved any record.</string>
    <string name="record_details_title">Record details</string>

    <string name="no_data_year">Statistics for this year are not yet available.\nPlease create a record to view them.</string>
    <string name="no_data_month">Statistics for this month are not yet available.\nPlease create a record to view them.</string>
    <string name="no_data_custom">Statistics for this value are not currently available.\nPlease create a record to view them.</string>
    <string name="over_date">The value you selected is invalid, please select again to view the statistics.</string>

    <string name="noti_custom_date">The start date cannot be greater than the end date.</string>
    <string name="noti_custom_distance">The distance between values must not exceed 13 months.</string>
    <string name="noti_month_selected">The value of the month you selected is greater than the current month value.</string>

    <string name="btn_search">Search</string>

    <string name="your_image">Your Image</string>

</resources>
