<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_notification"
        android:icon="@drawable/icon_noti"
        app:showAsAction="ifRoom"
        android:title="@string/notification_title"
        android:onClick="Notification_onClick"
        android:iconTint="@color/md_theme_onSurfaceVariant"/>

    <item
        android:id="@+id/action_new_record"
        android:icon="@drawable/common_add_or_edit"
        app:showAsAction="ifRoom"
        android:title="@string/add_record"
        android:iconTint="@color/md_theme_onSurfaceVariant"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/common_settings"
        android:onClick="Setting_onClick"
        app:showAsAction="ifRoom"
        android:title="@string/title_settings" />

</menu>