<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.doan_diaryapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_collection" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_analyze"
            app:destination="@id/navigation_analyze" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notification"
            app:destination="@id/navigation_notification"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_collection"
        android:name="com.example.doan_diaryapp.ui.collection.CollectionFragment"
        android:label="@string/title_collection"
        tools:layout="@layout/fragment_collection" />

    <fragment
        android:id="@+id/navigation_analyze"
        android:name="com.example.doan_diaryapp.ui.analyze.AnalyzeFragment"
        android:label="@string/title_analyze"
        tools:layout="@layout/fragment_analyze" />

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.example.doan_diaryapp.ui.notification.NotificationFragment"
        android:label="Notification"
        tools:layout="@layout/fragment_main_notification"/>

</navigation>