<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    >

    <LinearLayout
        android:layout_marginTop="30dp"
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_display"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:textColor="@color/md_theme_onSurfaceVariant"
            />

        <LinearLayout
            android:id="@+id/layoutTheme"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="8dp"
            android:onClick="onLayoutThemeClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textviewTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/md_theme_onSurface_mediumContrast"
                android:text="@string/setting_theme"/>

            <TextView
                android:id="@+id/textviewSubTheme"
                android:layout_width="wrap_content"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/md_theme_onSurfaceVariant"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/layoutLanguage"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onLayoutLanguageClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textviewLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/md_theme_onSurface_mediumContrast"
                android:text="@string/change_language"/>

            <TextView
                android:id="@+id/textviewSubLanguage"
                android:layout_width="wrap_content"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/md_theme_onSurfaceVariant"
                android:layout_height="wrap_content"/>

        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_other"
            android:layout_marginTop="16dp"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:textColor="@color/md_theme_onSurfaceVariant"
            />

        <LinearLayout
            android:id="@+id/layoutFeedback"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="8dp"
            android:onClick="onLayoutFeedbackClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textviewFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:textColor="@color/md_theme_onSurface_mediumContrast"
                android:text="@string/setting_feedback"/>

            <TextView
                android:id="@+id/textviewSubFeedback"
                android:layout_width="wrap_content"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/md_theme_onSurfaceVariant"
                android:text="@string/setting_sub_feedback"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

