<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Theme.Material3.DayNight.NoActionBar"
    tools:context=".ui.analyze.AnalyzeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/analyse_TopAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/title_analyze"
            app:menu="@menu/toolbar_collection_and_stats"
            app:titleCentered="false"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tb_thongkefm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/analyse_TopAppBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/TabMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_month" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/TabYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entire_year"/>

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_thongkefm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/analyse_TopAppBar" />

</androidx.constraintlayout.widget.ConstraintLayout>